<resources>
    <string name="app_name">IntentsProj</string>
    <string name="number1">Number 1</string>
    <string name="number2">Number 2</string>
    <string name="ok">OK</string>
    <string name="number1hint">Enter number 1</string>
    <string name="number2hint">Enter number 2</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multuply">*</string>
    <string name="devision">/</string>
</resources>